# fingpt_trader

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  build.py  config.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt  run_trader.py  setup.cfg  setup.py  todos.txt  train_fingpt_lora.py
.github/workflows/: python-app.yml
config/: fingpt_config.yaml  logging.yaml  model.yaml  robo_advisor_config.yaml  services.yaml  strategies.yaml  test_trading.yaml  trading.yaml  trading_config.yaml
data/: market_data.py  news_data.py  processor.py
docs/: README.md
examples/: market_data.py  pair_trading.py  robo_advisor_demo.py  sentiment_analysis.py
models/client/: profile.py
models/llm/: base.py  convert.py  fingpt.py
models/llm/utils/: inference.py  tokenizer.py
models/market/: inefficiency.py  patterns.py
models/portfolio/: optimization.py  rebalancing.py  risk.py
models/robo advisor/: risk_analyzer.py
models/robo_advisor/portfolio_optimization/: constraints.py  optimizer.py
models/robo_advisor/risk_management/: alerts.py  risk_analyzer.py
models/sentiment/: analyzer.py  preprocessor.py
models/sentiment_analysis/: sentiment_preprocessor.py
models/sentiment_analysis/fingpt_model/: model.py
models/trading/: signal_generator.py
models/trading/market_inefficiency/: detector.py  patterns.py
models/trading/market_inefficiency.py/: detector.py
scripts/: analyze.py  backtest.py  live_trade.py  run_trader.py  start_bot.py  trading_bot.py
services/: base_service.py
services/data_feeds/: market_data_service.py  news_service.py
services/exchanges/: base.py  binance.py
services/monitoring/: performance_tracker.py  system_monitor.py
services/robo/: advisor_service.py  basic_robo_service.py  robo_service.py
services/trading/: broker_service.py  order_manager.py  retry_handler.py  robo_service.py  trade_validator.py
strategies/: __init__.py  base_strategy.py  tax_aware.py
strategies/hybrid/: hybrid_strategy.py  risk_allocator.py  signal_combiner.py  weight_optimizer.py
strategies/inefficiency/: inefficiency_strategy.py
strategies/portfolio/: manager.py  tax_aware.py
strategies/robo/: allocation.py  rebalancing.py  tax_aware.py
strategies/sentiment/: analyzer.py  config.py  preprocessor.py  sentiment_strategy.py  signals.py
strategies/technical/: trend_following.py
stubs/nltk/: __init__.pyi
stubs/scipy/: __init__.pyi
tests/: test_conversion.py  test_portfolio_optimization.py  test_robo_advisor.py  test_signal_generation.py  test_system_integration.py
utils/: config.py  console_ui.py  logging.py  validation.py  verbosity.py
