[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 311

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
packages = ["fingpt_trader"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".git", "__pycache__"]
skips = ["B101", "B104"]  # Skip assert statements and hardcoded bind
targets = ["fingpt_trader"]

[tool.bandit.assert_used]
skips = ["test_*.py"]

[tool.bandit.hardcoded_bind_all_interfaces]
skips = ["start_bot.py"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fingpt_trader"
version = "0.1.0"
description = "FinGPT Market Inefficiency Detection System"
readme = "README.md"
requires-python = ">=3.11"