[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 311

[tool.bandit]
exclude_dirs = ["tests", "venv", ".git", "__pycache__"]
skips = ["B101", "B104"]  # Skip assert statements and hardcoded bind
targets = ["fingpt_trader"]

[tool.bandit.assert_used]
skips = ["test_*.py"]

[tool.bandit.hardcoded_bind_all_interfaces]
skips = ["start_bot.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,venv,tests, dist

[coverage:run]
branch = True
source = fingpt_trader

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 100
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fingpt_trader"
version = "0.1.0"
description = "FinGPT Market Inefficiency Detection System"
readme = "README.md"
requires-python = ">=3.11"